Cycles: OpenCL compiler crashes with new AMD drivers #52645

Closed
opened 2017-09-04 11:21:17 +02:00 by Lennard Haaks · 27 comments

System Information
CPU: Intel i5 2500k
GPU: AMD Radeon R9 390
RAM: 8Gb
Operating system: Windows 10 Pro v1703
Driver: AMD Radeon 17.7.2 / 17.8.2 (tested both)

Blender Version
Broken: blender-2.79.0-git.718af8e-windows64 / blender-2.79-rc2-windows64

Short description of error
When I use OpenCL rendering and I apply an UV Map with an image texture, appropriate kernel file(s) can't be compiled resulting in a crash of Blender. Rendering without the image seems to work fine.

Exact steps for others to reproduce the error

  • Start blender with: blender --factory-startup
  • Load the attached blend file
  • Render

This might be an issue because of a rather new driver. I haven't been using Blender for that long yet, so I can't say if older driver versions work properly or not. I would be very interested to know if there are older driver versions that work well, so I can roll back to that specific version, if that's an option.

uvtexture_test.blend
cycles-debug.txt

**System Information** CPU: Intel i5 2500k GPU: AMD Radeon R9 390 RAM: 8Gb Operating system: Windows 10 Pro v1703 Driver: AMD Radeon 17.7.2 / 17.8.2 *(tested both)* **Blender Version** Broken: blender-2.79.0-git.718af8e-windows64 / blender-2.79-rc2-windows64 **Short description of error** When I use OpenCL rendering and I apply an UV Map with an image texture, appropriate kernel file(s) can't be compiled resulting in a crash of Blender. Rendering without the image seems to work fine. **Exact steps for others to reproduce the error** - Start blender with: blender --factory-startup - Load the attached blend file - Render This might be an issue because of a rather new driver. I haven't been using Blender for that long yet, so I can't say if older driver versions work properly or not. I would be very interested to know if there are older driver versions that work well, so I can roll back to that specific version, if that's an option. [uvtexture_test.blend](https://archive.blender.org/developer/F771813/uvtexture_test.blend) [cycles-debug.txt](https://archive.blender.org/developer/F771838/cycles-debug.txt)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @lennardh

Added subscriber: @lennardh

#52970 was marked as duplicate of this issue

#52970 was marked as duplicate of this issue

#52868 was marked as duplicate of this issue

#52868 was marked as duplicate of this issue

#52821 was marked as duplicate of this issue

#52821 was marked as duplicate of this issue

#52589 was marked as duplicate of this issue

#52589 was marked as duplicate of this issue

Added subscribers: @MaiLavelle, @dfelinto

Added subscribers: @MaiLavelle, @dfelinto
Mai Lavelle was assigned by Dalai Felinto 2017-09-04 16:25:45 +02:00

@MaiLavelle can you confirm/triage this one?

@MaiLavelle can you confirm/triage this one?
Member

Looks to be the same compiler crash from #52589. Not sure if there's anything we can do as there's no proper error from the compiler. I don't think reverting to older drivers will help in this case either, as the crash is likely an existing issue triggered by some code change we made at some point. Maybe someone could bisect this, could help the compiler team in getting this fixed.

Looks to be the same compiler crash from #52589. Not sure if there's anything we can do as there's no proper error from the compiler. I don't think reverting to older drivers will help in this case either, as the crash is likely an existing issue triggered by some code change we made at some point. Maybe someone could bisect this, could help the compiler team in getting this fixed.
Member

Added subscribers: @bliblubli, @LukasStockner, @mont29

Added subscribers: @bliblubli, @LukasStockner, @mont29
Mai Lavelle changed title from Blender crash using OpenCL rendering when UV map with image texture is used to Cycles: OpenCL compiler crashes sometimes while building kernels 2017-09-04 17:04:57 +02:00

Driver 17.7.1 works, 17.8.2 doesn't, for both files

Driver 17.7.1 works, 17.8.2 doesn't, for both files

This comment was removed by @bliblubli

*This comment was removed by @bliblubli*

RC1 doesn't work, build from 21 July does with 17.8.2

RC1 doesn't work, build from 21 July does with 17.8.2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

driver 17.9.1 resolves the bug.

driver 17.9.1 resolves the bug.
Author

Version: blender-2.79.0-git.718af8e-windows64

I can confirm that 17.7.1 works.

Tried 17.9.1 with a clean install, crashes in the same manner as with driver 17.7.2 / 17.8.2

**Version**: blender-2.79.0-git.718af8e-windows64 I can confirm that 17.7.1 works. Tried 17.9.1 with a clean install, crashes in the same manner as with driver 17.7.2 / 17.8.2

@lennardh both your file and my file rendered on latest buildbot using 17.9.1 on RX480. I did a normal install from 17.7.1, but OpenCL driver should have been actualized. I'll try today on Vega to see with clean install.

@lennardh both your file and my file rendered on latest buildbot using 17.9.1 on RX480. I did a normal install from 17.7.1, but OpenCL driver should have been actualized. I'll try today on Vega to see with clean install.

I can confirm 17.9.1 still crashes on Vega and RX 480 with another machine and a clean install. It seems somehow the OpenCL driver wasn't actualized with normal install. So in the meantime, staying on 17.7.1 is recommended.

I can confirm 17.9.1 still crashes on Vega and RX 480 with another machine and a clean install. It seems somehow the OpenCL driver wasn't actualized with normal install. So in the meantime, staying on 17.7.1 is recommended.

Added subscribers: @Julian-4, @LazyDodo, @t0xik, @Sergey

Added subscribers: @Julian-4, @LazyDodo, @t0xik, @Sergey
Brecht Van Lommel changed title from Cycles: OpenCL compiler crashes sometimes while building kernels to Cycles: OpenCL compiler crashes with new AMD drivers 2017-09-19 22:43:55 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Reopening since this is not solved.

Reopening since this is not solved.
Member

Added subscribers: @YaroslavVasilyev, @FloridaJo

Added subscribers: @YaroslavVasilyev, @FloridaJo
Member

Added subscriber: @FrontBack

Added subscriber: @FrontBack

This issue was referenced by blender/cycles@ad2001adfa

This issue was referenced by blender/cycles@ad2001adfa4c2f720bbac504d0dded5127a71e91

This issue was referenced by 660e8e59e7

This issue was referenced by 660e8e59e7b4265324a8fba7ae716f84a73c6c64

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52645
No description provided.