Fix T52645, T52645: AMD OpenCL compiler crash with recent drivers.

Work around the bug by reshuffling code.